--- a/config.ini
+++ b/config.ini
@@ -2,9 +2,6 @@
 # Whether to log everything the script does
 LOG_ACTIVITY = True
 
-# Use fake environment variables to test the script as if it was called from Radarr
-TEST_MODE_RADARR = False
-
 # Your TMDB API key, if not provided, language-dependant features won't be activated
 TMDB_API_KEY = YOUR_API_KEY
 
@@ -12,9 +9,9 @@ TMDB_API_KEY = YOUR_API_KEY
 YOUTUBE_API_KEY = YOUR_API_KEY
 
 # Language-dependant parameters to search for trailers on Youtube. You can add more languages simply by duplicating the section and specifying the language code in the section's name
-[YOUTUBE_PARAMS]
-default.use_original_movie_name = False
-default.search_keywords = vost trailer
+[YOUTUBE_PARAMS.default]
+use_original_movie_name = False
+search_keywords = vostfr trailer
 
 [YOUTUBE_PARAMS.fr]
 use_original_movie_name = True
