Improved doc for cookies

--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,8 @@ TMDB_API_KEY = YOUR_API_KEY
 # Youtube API key (see https://developers.google.com/youtube/v3/getting-started)
 YOUTUBE_API_KEY = YOUR_API_KEY
 
-# Browser name to get cookies from to download YouTube videos with age restrictions. See https://github.com/yt-dlp/yt-dlp/wiki/FAQ#how-do-i-pass-cookies-to-yt-dlp for details
+# Browser name to get cookies from to download YouTube videos with age restrictions. See https://github.com/yt-dlp/yt-dlp/wiki/FAQ#how-do-i-pass-cookies-to-yt-dlp for details.
+# 	supported values at the time of writing this: brave, chrome, chromium, edge, firefox, opera, safari, vivaldi, whale
 yt_dlp_cookies_browser = firefox
 
 # Language-dependant parameters to search for trailers on Youtube. You can add more languages simply by duplicating the section and specifying the language code in the section's name
