Updated config documentation

--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 # Whether to log everything the script does
 LOG_ACTIVITY = True
 
-# Your TMDB API key, if not provided, language-dependant features won't be activated
+# Your TMDB API key, OPTIONAL. If not provided, language-dependant features won't be activated
 TMDB_API_KEY = YOUR_API_KEY
 
 # Youtube API key (see https://developers.google.com/youtube/v3/getting-started)
@@ -12,11 +12,14 @@ YOUTUBE_API_KEY = YOUR_API_KEY
 # 	supported values at the time of writing this: brave, chrome, chromium, edge, firefox, opera, safari, vivaldi, whale
 yt_dlp_cookies_browser = firefox
 
-# Language-dependant parameters to search for trailers on Youtube. You can add more languages simply by duplicating the section and specifying the language code in the section's name
+# Language-dependant parameters to search for trailers on Youtube.
+#   use_original_movie_name : True | False, whether to use the english name or the original name to search for the trailer
+#   search_keywords : the suffix appended to the YouTube search query for a specific language. The resulting query will be something like 'Movie Title YEAR keywords'.
+# You can add more languages simply by duplicating the section and specifying the language code in the section's name
+# Example :
+# [YOUTUBE_PARAMS.fr]
+# use_original_movie_name = True
+# search_keywords = bande annonce
 [YOUTUBE_PARAMS.default]
 use_original_movie_name = False
-search_keywords = vostfr trailer
-
-[YOUTUBE_PARAMS.fr]
-use_original_movie_name = True
-search_keywords = bande annonce
+search_keywords = trailer
